# New_AI_Kanilla

./: .gitignore  .python-version  README.md  api.py  ingestion.py  pyproject.toml  requirements.txt  test_r.py
backend/: app.py  constants.py  create_transcript_chunks.py  data_models.py  ingest_transcripts.py  rag.py
frontend/: app.py
